--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,29 @@
 {
-  "background_color": "#ffffff",
-  "description": "Projek ini bermula dari kendala yang sering terjadi oleh saya ketika sedang mengisi kode voucher, khususnya untuk paket internet, oleh karena itu disimpulkan beberapa alasan kenapa penting untuk menemuka pemecahan masalah tersebut.",
-  "dir": "ltr",
-  "display": "standalone",
-  "name": "Iseein: Pengisi Kode Voucher",
-  "orientation": "any",
-  "scope": "/",
+  "name": "Iseein: Autofill Voucher",
   "short_name": "Iseein",
-  "start_url": "/",
-  "theme_color": "#fff",
-  "categories": [],
-  "screenshots": [],
+  "description": "Progressive Web App Akbar.",
   "icons": [
     {
-      "src": "components/images/favicon.ico",
-      "type": "image/x-icon"
+      "src": "components/images/android/android-launchericon-48-48.png",
+      "sizes": "48x48",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "components/images/android/android-launchericon-192-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+        "src": "components/images/android/android-launchericon-512-512.png",
+        "sizes": "512x512",
+        "type": "image/png",
+        "purpose": "any maskable"
     }
   ],
-  "shortcuts": []
+  "start_url": "/",
+  "display": "standalone",
+  "theme_color": "#f45",
+  "background_color": "#fff"
 }
