--- a/manifest.json
+++ b/manifest.json
@@ -22,7 +22,7 @@
         "purpose": "any maskable"
     }
   ],
-  "start_url": "/",
+  "start_url": "/Iseein-Pemindai-dan-Autofill-Voucher",
   "display": "standalone",
   "theme_color": "#f45",
   "background_color": "#fff"
